--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <h3 id="education">Education</h3>
 
-                <h5 id="university-of-tennessee"><a href="http://www.utk.edu"><strong>The University of Tennessee, Knoxville</strong></a></h5>
+                <h5 id="university-of-tennessee"><a href="http://www.utk.edu"><strong>University of Tennessee, Knoxville</strong></a></h5>
                 <ul>
                     <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
                     <li>PhD in Computer Science (August 2019) | GPA: 3.91</li>
@@ -90,8 +90,8 @@
 
                 <h4 id="honors">Honors</h4>
                 <ul>
-                    <li>GSS Travel Award, the University of Tennessee, Knoxville (2018)</li>
-                    <li>Department excellence award, the University of Tennessee, Knoxville (2013)</li>
+                    <li>GSS Travel Award, University of Tennessee, Knoxville (2018)</li>
+                    <li>Department excellence award, University of Tennessee, Knoxville (2013)</li>
                     <li>Outstanding graduate and several scholarships, Nanjing Agricultural University (2007-2011)</li>
                 </ul>
             </div>
@@ -136,7 +136,7 @@
         </div>
         
         <div>
-            <strong>The University of Tennessee, Knoxville</strong> — Knoxville, TN<br/>
+            <strong>University of Tennessee, Knoxville</strong> — Knoxville, TN<br/>
             Graduate Research Assistant, the Office of Information Technology — 2014 - 2017<br/>
             <ul>
                 <li>University web server configuration and optimization.</li>
