--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <li>Google Search Appliance administration and implementation.</li>
             </ul>
 
-            Graduate Research Assistant, Dr. Langston’s lab — 2013 - 2014<br/>
+            Graduate Research Assistant, Dr. Michael A. Langston’s lab — 2013 - 2014<br/>
             <ul>
                 <li>Implemented an R package <a href="https://github.com/YupingLu/biclique">biclique</a> to enumerate maximal bicliques.</li>
                 <li>Developed <a href="https://grappa.eecs.utk.edu/">GrAPPA</a> which is a web interface built on the <a href="https://usegalaxy.org/">Galaxy</a> framework (Python) for graph-based tools.</li>
