--- a/files/user manual.html
+++ b/files/user manual.html
@@ -14385,7 +14385,7 @@ Delete the first line of each gen_*_db.dat file.</p>
 <pre><code> 20 outputs,   11 variables,   conViol  rank  crowDist
 
 </code></pre>
-<h4 id="4.-Change-random-seeds">4. Change random seeds<a class="anchor-link" href="#4.-Change-random-seeds">&#182;</a></h4><p>We tested the moga code by changing two random seeds.<br />
+<h4 id="4.-Change-random-seeds">4. Change random seeds<a class="anchor-link" href="#4.-Change-random-seeds">&#182;</a></h4><p>We also tested the moga code by changing two random seeds.<br />
 Change MOGA random seed: EXEC="../nsga2r 0.1 3  2" (in scanjob.s)<br />
 Change lattice error random seed: srand(2021); (in problem.cpp)</p>
 
@@ -14396,7 +14396,7 @@ Change lattice error random seed: srand(2021); (in problem.cpp)</p>
 <h2 id="Machine-Learning-Approach">Machine Learning Approach<a class="anchor-link" href="#Machine-Learning-Approach">&#182;</a></h2><ul>
 <li>We first preprocess training data acquired from prior simulations and use this data to obtain two well-trained models using the neural network (NN) depicted below. </li>
 <li>We then use these two NN models to replace DA/MA particle tracking in MOGA while the rest of the MOGA setup remains the same as in the original tracking-based MOGA (Tr-MOGA). </li>
-<li>We evaluate the results.</li>
+<li>Finally, we evaluate the results.</li>
 </ul>
 <p><img src="cnn.png" alt="drawing" width="600"/></p>
 <p>8-layer fully-connected (FC) NN architecture for DA and MA prediction.</p>
@@ -14405,7 +14405,7 @@ Change lattice error random seed: srand(2021); (in problem.cpp)</p>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="ML-MOGA">ML-MOGA<a class="anchor-link" href="#ML-MOGA">&#182;</a></h2><h4 id="1.-Training-Data">1. Training Data<a class="anchor-link" href="#1.-Training-Data">&#182;</a></h4><p>We used the first 10 dat files as training data. These data are stored in dat folder on CAM. Below are two python scripts to preprocess the data (include filtering out those not meet the constraints).</p>
+<h2 id="ML-MOGA">ML-MOGA<a class="anchor-link" href="#ML-MOGA">&#182;</a></h2><h4 id="1.-Training-Data">1. Training Data<a class="anchor-link" href="#1.-Training-Data">&#182;</a></h4><p>We used the first 10 dat files as training data. These data are stored in dat folder on CAM (one example: CAM/11knobs_ml/7_test/). Below are two python scripts to preprocess the data (include filtering out those not meet the constraints).</p>
 <p>python pre.da.py<br />
 python pre.ma.py</p>
 
