--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
             <strong>Lawrence Berkeley National Laboratory</strong> — Berkeley, CA<br/>
-            Postdoctoral Scholar, the Advanced Light Source — 2019 - Present<br/>
+            Postdoctoral Scholar, the Advanced Light Source — 2019 - 2021<br/>
             <ul>
                 <li>Supervisor: <a href="https://als.lbl.gov/people/simon-leemann/">Dr. Simon C. Leemann</a></li>
                 <li>Improved multi-objective genetic algorithm for Lattice Optimization using Deep Learning.</li>
