Add new job and new paper

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-sm-8 col-md-8">
                 <h3 id="research-interests">Research Interests</h3>
-                <p>Machine Learning | Graph Algorithm | Data Mining | Bioinformatics</p>
+                <p>Machine Learning | Graph Algorithm | Bioinformatics</p>
 
                 <h3 id="education">Education</h3>
 
@@ -90,6 +90,7 @@
 
                 <h4 id="honors">Honors</h4>
                 <ul>
+                    <li><a href="https://als.lbl.gov/machine-learning-team-receives-2021-halbach-award/">Klaus Halbach Award</a>, ALS, Berkeley Lab (2021)</li>
                     <li>GSS Travel Award, University of Tennessee, Knoxville (2018)</li>
                     <li>Department excellence award, University of Tennessee, Knoxville (2013)</li>
                     <li>Outstanding graduate and several scholarships, Nanjing Agricultural University (2007-2011)</li>
@@ -108,6 +109,15 @@
         </div>
 
         <h3 id="research-and-work-experience">Experience</h3>
+        <div>
+            <strong>Katana Graph</strong> — Lakewood, CO<br/>
+            Machine Learning Engineer II — 2021 - current<br/>
+            <ul>
+                <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
+                <li>Implemented end-to-end pipelines of data analysis.</li>
+            </ul>
+        </div>
+        
         <div>
             <strong>Lawrence Berkeley National Laboratory</strong> — Berkeley, CA<br/>
             Postdoctoral Scholar, the Advanced Light Source — 2019 - 2021<br/>
@@ -150,22 +160,6 @@
             </ul>
         </div>
 
-        <div>
-            <strong>Whale Cloud</strong> — a leading BSS/OSS system vendor for the Telecom industry - Nanjing, China<br/>
-            Implementation Engineer, worked on two main projects — 2011 - 2012<br/>
-            VTR OCS Project - Santiago, Chile<br/>
-            <ul>
-                <li>Determined customer’s business requirements and produced technical proposal.</li>
-                <li>Responsible for communication with development & testing teams in China for correct and timely development of customer's requirements.</li>
-            </ul>
-            Perusat Wimax CvBS Operations & Maintenance Project - Lima, Peru<br/>
-            <ul>
-                <li>Responsible to ensure smooth running of system.</li>
-                <li>Performed daily system checks in order to maintain system health.</li>
-                <li>Configuration of new price plans and business requirements into the system as required by commercial and marketing departments.</li>
-            </ul>
-        </div>
-
         <h3 id="publications">Publications</h3>
 
         <h4 id="conference-papers">Conference Papers</h4>
@@ -179,7 +173,7 @@
                     <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span> (2021)<br/>
                     <span class="pub">
                         <a href="/files/ipac21.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-                        <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+                        <a href="https://accelconf.web.cern.ch/ipac2021/papers/mopab106.pdf"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
                     </span>
                 </div>
             </li>
@@ -226,6 +220,19 @@
 
         <h4 id="journal-papers">Journal Papers</h4>
         <ul>
+            <li>
+                <div class="pub">
+                    <strong>
+                        <a href="#" class="pub-title">Demonstration of machine learning-enhanced multiobjective optimization of ultrahigh-brightness lattices for fourth-generation synchrotron light sources</a>
+                    </strong><br/>
+                    Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Hiroshi Nishimura, Marco Venturini, Thorsten Hellert<br/>
+                    <span class="venue"><a href="#">Physical Review Accelerators and Beams</a></span> — in review<br/>
+                    <span class="pub">
+                        <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+                        <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+                    </span>
+                </div>
+            </li>
             <li>
                 <div class="pub">
                     <strong>
@@ -398,7 +405,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2021 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2021-07-08</p>
+            <p>&copy; 2022 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2022-08-01</p>
         </div>
     </div>
 
