add two posters

--- a/index.html
+++ b/index.html
@@ -292,6 +292,32 @@
             <li>
                 <div class="pub">
                     <strong>
+                        <a href="/files/ser_meeting_20_poster" class="pub-title">Improving Multi-objective Genetic Algorithm for Lattice Optimization with Machine Learning</a>
+                    </strong><br/>
+                    Yuping Lu, Changchun Sun, and Simon C. Leemann<br/>
+                    <span class="venue"><a href="https://als.lbl.gov/2020-user-meeting-agenda/">ALS User Meeting 2020</a></span>
+                    — Berkeley, California, August 25, 2020<br/>
+                    <span class="pub">
+                        <a href="/files/ser_meeting_20_poster"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
+                    </span>
+                </div>
+            </li>
+            <li>
+                <div class="pub">
+                    <strong>
+                        <a href="/files/ser_meeting_19_poster" class="pub-title">Beam Based Optimization and Machine Learning for Synchrotrons</a>
+                    </strong><br/>
+                    Charles Nathan Melton, Yuping Lu, Shuai Liu, Hiroshi Nishimura, Matthew Marcus, Changchun Sun, Alexander Hexemer, Simon C. Leemann<br/>
+                    <span class="venue"><a href="https://als.exposure.co/2019-als-user-meeting">ALS User Meeting 2019</a></span>
+                    — Berkeley, California, October 1, 2019<br/>
+                    <span class="pub">
+                        <a href="/files/ser_meeting_19_poster"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Poster</a>
+                    </span>
+                </div>
+            </li>
+            <li>
+                <div class="pub">
+                    <strong>
                         <a href="/files/PI2019poster.pdf" class="pub-title">Convolutional Neural Networks for Hydrometeor Classification Using Dual Polarization Doppler Radars</a>
                     </strong><br/>
                     Yuping Lu, Jitendra Kumar<br/>
