--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
             <strong>Katana Graph</strong> — Lakewood, CO<br/>
-            Machine Learning Engineer II — 2021 - current<br/>
+            Machine Learning Engineer II — 2021 - Present<br/>
             <ul>
                 <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
                 <li>Implemented end-to-end pipelines of data analysis.</li>
