--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <li>
                 <div class="pub">
                     <strong>
-                        <a href="/files/ipac21.pdf" class="pub-title">Enhancing the MOGA optimization process at ALS-U with Machine Learning</a>
+                        <a href="/files/ipac21.pdf" class="pub-title">Enhancing the MOGA Optimization Process at ALS-U with Machine Learning</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
                     <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span> (2021)<br/>
@@ -223,7 +223,7 @@
             <li>
                 <div class="pub">
                     <strong>
-                        <a href="#" class="pub-title">Demonstration of machine learning-enhanced multiobjective optimization of ultrahigh-brightness lattices for fourth-generation synchrotron light sources</a>
+                        <a href="#" class="pub-title">Demonstration of Machine Learning-enhanced Multiobjective Optimization of Ultrahigh-brightness Lattices for Fourth-generation Synchrotron Light Sources</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Hiroshi Nishimura, Marco Venturini, Thorsten Hellert<br/>
                     <span class="venue"><a href="#">Physical Review Accelerators and Beams</a></span> — in review<br/>
@@ -279,7 +279,7 @@
             <li>
                 <div class="pub">
                     <strong>
-                        <a href="/files/ipac_21_poster.pdf" class="pub-title">Enhancing the MOGA optimization process at ALS-U with Machine Learning</a>
+                        <a href="/files/ipac_21_poster.pdf" class="pub-title">Enhancing the MOGA Optimization Process at ALS-U with Machine Learning</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
                     <span class="venue"><a href="https://www.ipac21.org/">IPAC 21</a></span>
