--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <ul>
                     <li><a href="https://als.lbl.gov/machine-learning-team-receives-2021-halbach-award/">Klaus Halbach Award</a>, ALS, Berkeley Lab (2021)</li>
                     <li>GSS Travel Award, University of Tennessee, Knoxville (2018)</li>
-                    <li>Department excellence award, University of Tennessee, Knoxville (2013)</li>
-                    <li>Outstanding graduate and several scholarships, Nanjing Agricultural University (2007-2011)</li>
+                    <li>Department Excellence Award, University of Tennessee, Knoxville (2013)</li>
+                    <li>Outstanding Graduate and Several Scholarships, Nanjing Agricultural University (2007-2011)</li>
                 </ul>
             </div>
               
