--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                         <a href="#" class="pub-title">Demonstration of Machine Learning-enhanced Multiobjective Optimization of Ultrahigh-brightness Lattices for Fourth-generation Synchrotron Light Sources</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Hiroshi Nishimura, Marco Venturini, Thorsten Hellert<br/>
-                    <span class="venue"><a href="#">Physical Review Accelerators and Beams</a></span> — in review<br/>
+                    <span class="venue"><a href="#">Nuclear Inst. and Methods in Physics Research, A</a></span> — (2023): 168192 doi:10.1016/j.nima.2023.168192<br/>
                     <span class="pub">
-                        <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-                        <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+                        <a href="/files/als2023.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+                        <a href="https://www.sciencedirect.com/science/article/pii/S0168900223001821"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
                     </span>
                 </div>
             </li>
@@ -431,7 +431,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2023 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2023-02-13</p>
+            <p>&copy; 2023 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2023-04-03</p>
         </div>
     </div>
 
