--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <a href="#" class="pub-title">Demonstration of Machine Learning-enhanced Multiobjective Optimization of Ultrahigh-brightness Lattices for Fourth-generation Synchrotron Light Sources</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Hiroshi Nishimura, Marco Venturini, Thorsten Hellert<br/>
-                    <span class="venue"><a href="#">Nuclear Inst. and Methods in Physics Research, A</a></span> — (2023): 168192 doi:10.1016/j.nima.2023.168192<br/>
+                    <span class="venue"><a href="https://www.sciencedirect.com/science/article/pii/S0168900223001821">Nuclear Inst. and Methods in Physics Research, A</a></span> — (2023): 168192 doi:10.1016/j.nima.2023.168192<br/>
                     <span class="pub">
                         <a href="/files/als2023.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
                         <a href="https://www.sciencedirect.com/science/article/pii/S0168900223001821"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
