--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <strong>Katana Graph</strong> — Lakewood, CO<br/>
             Machine Learning Engineer, graph AI platform team — Oct. 2021 - May 2023<br/>
             <ul>
+                <li>Manager: <a href="https://inside.mines.edu/~bwu/">Dr. Bo Wu</a></li>
                 <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
                 <li>Implemented end-to-end pipelines of data analysis.</li>
             </ul>
