--- a/index.html
+++ b/index.html
@@ -69,14 +69,11 @@
 
         <div class="row">
             <div class="col-sm-8 col-md-8">
-                <h3 id="research-interests">Research Interests</h3>
-                <p>Machine Learning | Graph Algorithm | Bioinformatics</p>
-
                 <h3 id="education">Education</h3>
 
                 <h5 id="university-of-tennessee"><a href="http://www.utk.edu"><strong>University of Tennessee, Knoxville</strong></a></h5>
                 <ul>
-                    <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
+                    <li>Research Interests: Machine Learning | Graph Algorithm | Bioinformatics</li> 
                     <li>PhD in Computer Science (August 2019) | GPA: 3.91</li>
                     <li>Advisor: Dr. Michael A. Langston</li>
                     <li><a href="http://yupinglu.me/dissertation/">Dissertation</a></li>
@@ -86,6 +83,14 @@
                 <ul>
                     <li>BEng in Computer Science (May 2011) | GPA: 3.64</li>
                     <li>Advisor: Dr. Huanliang Xu</li>
+                </ul>
+
+                <h4 id="technical-skills">Technical Skills</h4>
+                <ul>
+                    <li><p>Programming languages: C/C++, Python, R, PHP, HTML+CSS+Javascript</p></li>
+                    <li><p>Tools: PyTorch, PyG, Jupyter, NumPy, Conda, Git, LaTeX</p></li>
+                    <li><p>Cloud Computing: AWS, GCP, Docker, Kubernetes</p></li>
+                    <li><p>HPC experience: ORNL CADES, LBNL NERSC</p></li>
                 </ul>
 
                 <h4 id="honors">Honors</h4>
