--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
                 <h4 id="technical-skills">Technical Skills</h4>
                 <ul>
-                    <li><p>Programming languages: C/C++, Python, R, PHP, HTML+CSS+Javascript</p></li>
-                    <li><p>Tools: PyTorch, PyG, Jupyter, NumPy, Conda, Git, LaTeX</p></li>
-                    <li><p>Cloud Computing: AWS, GCP, Docker, Kubernetes</p></li>
-                    <li><p>HPC experience: ORNL CADES, LBNL NERSC</p></li>
+                    <li>Programming languages: C/C++, Python, R, PHP, HTML+CSS+Javascript</li>
+                    <li>Tools: PyTorch, PyG, Jupyter, NumPy, Conda, Git, LaTeX</li>
+                    <li>Cloud Computing: AWS, GCP, Docker, Kubernetes</li>
+                    <li>HPC experience: ORNL CADES, LBNL NERSC</li>
                 </ul>
 
                 <h4 id="honors">Honors</h4>
