--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link " href="/files/cv.pdf">Curriculum Vitae</a>
+                    <a class="nav-link " href="#">Curriculum Vitae</a>
                 </li>
         
                 <li class="nav-item">
@@ -116,7 +116,7 @@
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
             <strong>Katana Graph</strong> — Lakewood, CO<br/>
-            Machine Learning Engineer, graph AI platform team — Oct. 2021 - May 2023<br/>
+            Machine Learning Engineer, graph AI platform team — Oct. 2021 - Present<br/>
             <ul>
                 <li>Manager: <a href="https://inside.mines.edu/~bwu/">Dr. Bo Wu</a></li>
                 <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
