Update Katana JD

--- a/index.html
+++ b/index.html
@@ -116,11 +116,15 @@
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
             <strong>Katana Graph</strong> — Lakewood, CO<br/>
-            Machine Learning Engineer, graph AI platform team — Oct. 2021 - Present<br/>
+            Machine Learning Engineer, graph AI platform team — Oct. 2021 - Jun. 2023<br/>
             <ul>
                 <li>Manager: <a href="https://inside.mines.edu/~bwu/">Dr. Bo Wu</a></li>
                 <li>Implemented Graph Neural Networks algorithms and infrastructure.</li>
-                <li>Implemented end-to-end pipelines of data analysis.</li>
+                <li>Developed distributed fullneighbor subgraph sampler and exported subgraphs for the use with PyG and DGL.</li>
+                <li>Created end-to-end machine learning pipelines of data analysis on Katana's distributed Graph AI platform.</li>
+                <li>Updated PyTorch conda package to work with Katana environment.</li>
+                <li>Built a UI prototype for Katana's Graph AI platform.</li>
+                <li>Tested Katana's AI libraries and filed bug reports for fix.</li>
             </ul>
         </div>
         
@@ -437,7 +441,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2023 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2023-06-01</p>
+            <p>&copy; 2023 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2023-06-28</p>
         </div>
     </div>
 
