--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Curriculum Vitae</a>
+                    <a class="nav-link " href="/files/cv.pdf">Curriculum Vitae</a>
                 </li>
         
                 <li class="nav-item">
