--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
                 <h4 id="technical-skills">Technical Skills</h4>
                 <ul>
-                    <li>Programming languages: C/C++, Python, R, PHP, HTML+CSS+Javascript</li>
-                    <li>Tools: PyTorch, PyG, Jupyter, NumPy, Conda, Git, LaTeX</li>
+                    <li>Programming languages: C/C++, Python, SQL, openCypher, R, PHP, HTML+CSS+Javascript</li>
+                    <li>Tools: PyTorch, LLM, PyG, Jupyter, NumPy, Pandas, Conda, Git, LaTeX</li>
                     <li>Cloud Computing: AWS, GCP, Docker, Kubernetes</li>
                     <li>HPC experience: ORNL CADES, LBNL NERSC</li>
                 </ul>
