--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h4 id="technical-skills">Technical Skills</h4>
                 <ul>
                     <li>Programming languages: C/C++, Python, SQL, openCypher, R, PHP, HTML+CSS+Javascript</li>
-                    <li>Tools: PyTorch, LLM, PyG, Jupyter, NumPy, Pandas, Conda, Git, LaTeX</li>
+                    <li>Tools: PyTorch, LLM, PyG, DGL, Jupyter, NumPy, Pandas, Conda, Git, LaTeX</li>
                     <li>Cloud Computing: AWS, GCP, Docker, Kubernetes</li>
                     <li>HPC experience: ORNL CADES, LBNL NERSC</li>
                 </ul>
