--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li>Programming languages: C/C++, Python, SQL, openCypher, R, PHP, HTML+CSS+Javascript</li>
                     <li>Tools: PyTorch, LLM, PyG, DGL, Jupyter, NumPy, Pandas, Conda, Git, LaTeX</li>
                     <li>Cloud Computing: AWS, GCP, Docker, Kubernetes</li>
-                    <li>HPC experience: ORNL CADES, LBNL NERSC</li>
+                    <li>HPC experience: ORNL CADES, LBNL NERSC, OpenMPI</li>
                 </ul>
 
                 <h4 id="honors">Honors</h4>
