--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
+            <strong>Walmart Global Tech</strong> — Dallas, TX<br/>
+            Data Scientist — Mar. 2024 - present<br/>
+        </div>
+
+        <div>
             <strong>Katana Graph</strong> — Lakewood, CO<br/>
             Machine Learning Engineer, graph AI platform team — Oct. 2021 - Jun. 2023<br/>
             <ul>
@@ -441,7 +446,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2023 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2023-10-11</p>
+            <p>&copy; 2023 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-03-09</p>
         </div>
     </div>
 
